# axum-sea

./: .env.example  .gitignore  Cargo.toml
migration/src/: lib.rs  m20251104_161216_create_users.rs  m20251104_162418_create_products.rs
src/: main.rs  middleware.rs  state.rs
src/config/: db.rs  jwt.rs
src/modules/: mod.rs
src/modules/product/: mod.rs  product_controller.rs  product_dto.rs  product_entity.rs  product_route.rs  product_service.rs
src/modules/shared/: error.rs
src/modules/user/: mod.rs  user_controller.rs  user_dto.rs  user_entity.rs  user_route.rs  user_service.rs
src/utils/: auth.rs  hash.rs
